# backup-to-storagebox

./: CHANGELOG.md  LICENSE  Makefile  README.md  backup-to-storage-box.sh  backup-to-storagebox.cabal  backup-to-storagebox.sh  backup.sh
.github/workflows/: ci.yml
app/: Main.hs
