cabal-version:      3.0
name:               backup-to-storagebox
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             John MacFarlane
maintainer:         jgm@berkeley.edu
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable backup-to-storagebox
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.2.0
                    , process
                    , directory
                    , temporary
                    , aeson
                    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
